[package]
name = "compiler"
version = "0.1.0"
edition = "2024"
description = "multilanguage compiler build that detects, organizes and AI-fixes projects across six languages"
repository = "https://github.com/alexph10/compiler"
keyword = ["build", "polyglot", "lint", "multilanguage"]


[[bin]]
name = "compiler"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
dirs = "6"
walkdir = "2"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
regex = "1"
colored = "3"
clap_complete = "4"
sha2 = "0.10"
notify = "7"
